--- a/package.json
+++ b/package.json
@@ -1,30 +1,26 @@
 {
   "name": "weathrly",
   "version": "1.0.0",
-  "description": "'weathrly app'",
+  "description": "--- title: weathrly ---",
   "main": "index.js",
-  "directories": {
-    "test": "test"
-  },
   "scripts": {
-   "start": "webpack-dev-server --hot --inline",
-   "build": "webpack",
-   "test": "mocha",
-   "sel": "java -jar selenium-server-standalone-2.53.0.jar",
-   "feature": "wdio wdio.conf.js"
- },
+    "start": "webpack-dev-server --hot --inline",
+    "build": "webpack",
+    "test": "mocha",
+    "sel": "java -jar selenium-server-standalone-2.53.0.jar",
+    "feature": "wdio wdio.conf.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/lrknaff/weathrly.git"
   },
-  "author": "Lacey Knaff and Christine Gamble",
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/lrknaff/weathrly/issues"
   },
   "homepage": "https://github.com/lrknaff/weathrly#readme",
   "devDependencies": {
-    "devDependencies": {
     "babel-core": "^6.17.0",
     "babel-loader": "^6.2.5",
     "chai": "^3.5.0",
