--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
   "devDependencies": {
     "babel-core": "^6.17.0",
     "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
     "chai": "^3.5.0",
     "css-loader": "^0.25.0",
+    "html-webpack-plugin": "^2.22.0",
     "mocha": "^3.1.0",
     "mocha-loader": "^1.0.0",
     "mock-local-storage": "^1.0.2",
