--- a/package.json
+++ b/package.json
@@ -21,23 +21,30 @@
   },
   "homepage": "https://github.com/lrknaff/weathrly#readme",
   "devDependencies": {
-    "babel-core": "^6.17.0",
+    "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
+    "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
+    "babel-register": "^6.16.3",
     "chai": "^3.5.0",
     "css-loader": "^0.25.0",
+    "enzyme": "^2.4.1",
+    "eslint": "^3.7.1",
+    "eslint-plugin-react": "^6.4.1",
     "html-webpack-plugin": "^2.22.0",
-    "mocha": "^3.1.0",
-    "mocha-loader": "^1.0.0",
-    "mock-local-storage": "^1.0.2",
+    "js-dom": "0.0.1",
+    "locus": "^1.2.0",
+    "mocha": "^3.1.2",
     "node-sass": "^3.10.1",
+    "react-addons-test-utils": "^15.3.2",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
-    "svg-url-loader": "^1.1.0",
-    "wdio-mocha-framework": "^0.4.3",
-    "webdriverio": "^4.2.16",
     "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.16.1"
+    "webpack-dev-server": "^1.16.2"
+  },
+  "dependencies": {
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2"
   }
 }
