--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint": "^3.7.1",
     "eslint-plugin-react": "^6.4.1",
     "html-webpack-plugin": "^2.22.0",
+    "jquery": "^3.1.1",
     "js-dom": "0.0.1",
     "locus": "^1.2.0",
     "mocha": "^3.1.2",
