--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "enzyme": "^2.4.1",
     "eslint": "^3.7.1",
     "eslint-plugin-react": "^6.4.1",
+    "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
+    "image-webpack-loader": "^2.0.0",
+    "img-loader": "^1.3.1",
     "jquery": "^3.1.1",
     "js-dom": "0.0.1",
     "locus": "^1.2.0",
